<resources>
    <string name="app_name">Calculator App</string>
    <string name="calculator">Calculator</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
</resources>